[project]
name = "gridwalker"
version = "0.1.0"
description = "A tiny MVC demo game: move @ around a grid with WASD. Shows MVC, input abstraction, and config strategy."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "pygame>=2.5",     # Game library
    "typer>=0.12.0",   # CLI (built on Click)
    "pytest",  # Testing framework
]

[project.scripts]
gridwalker = "gridwalker.cli:app"
gridwalker-term = "gridwalker.app:run"
gridwalker-pygame = "gridwalker.app_pygame:run"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
